# gradient-domain-copy-paste

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake
data/output/: animation_log_bird.mov  animation_log_penguin.mov  animation_penguin.mov
src/: a2.cpp  a4_main.cpp  a6.cpp  a6_main.cpp  array3D.h  filtering.cpp  filtering.h  floatimage.cpp  morphing.cpp  morphing.h
src/ext/: Makefile  cmake_install.cmake
